<resources>
    <string name="app_name">RU Cafe</string>
    <string name="title_activity_donut_order">DonutOrder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for warnings -->

    <!-- Strings used for spinners -->
    <string-array name="coffee_sizes_array">
        <item>Tall</item>
        <item>Venti</item>
        <item>Grande</item>
        <item>Short</item>
    </string-array>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="donut_types_array">
        <item>Yeast</item>
        <item>Cake</item>
        <item>Donut Hole</item>
    </string-array>

    <string-array name="yeast_flavours_array">
        <item>Strawberry</item>
        <item>Matcha</item>
        <item>Glazed</item>
    </string-array>

    <string-array name="cake_flavours_array">
        <item>Chocolate</item>
        <item>Strawberry</item>
        <item>Jelly</item>
    </string-array>

    <string-array name="donut_hole_flavours_array">
        <item>Jelly</item>
        <item>Cinnamon</item>
        <item>Lemonade</item>
    </string-array>

    <!-- Strings ued for xmls -->
    <string name="place_order_btn">Place Order</string>
    <string name="add_btn">Add</string>
    <string name="remove_btn">Remove</string>

    <string name="caramel">Caramel: </string>
    <string name="milk">Milk: </string>
    <string name="whipped_cream">Whipped Cream: </string>
    <string name="syrup">Syrup: </string>
    <string name="cream">Cream: </string>

    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order">Order</string>
    <string name="store_order">Store Order</string>

    <string name="subtotal">Subtotal: </string>
    <string name="sales_tax">Sales Tax: </string>
    <string name="total">Total: </string>
    <string name="cancel">Cancel Order</string>

    <string name="price">$0.00</string>

    <!-- Strings for Alerts -->
    <string name="remove_alert">Remove this donut?</string>
</resources>