<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <ListView
        android:layout_width="348dp"
        android:layout_height="397dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/salesTaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_tax"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="528dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="561dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="528dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="495dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginBottom="70dp"
        android:text="@string/remove_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="495dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="70dp"
        android:text="@string/place_order_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="560dp" />

</androidx.constraintlayout.widget.ConstraintLayout>